finished domain validator